# RuFi-core-wrapper

./: .checkstyle  .gitignore  .pmd  README.md  build.gradle.kts  build.sbt  release.config.js  settings.gradle.kts
.github/workflows/: build-and-deploy.yml
bash-scripts/: cargo-build.sh  cargo-test.sh  generate-headers.sh
core/native/src/main/scala/io/github/rustfields/: Lib.scala
core/native/src/main/scala/io/github/rustfields/rufi_core_wrapper/: Binding.scala
core/native/src/test/scala/io/github/rustfields/rufi_core_wrapper/: TestBinding.scala
core/src/main/scala/io/github/rustfields/rufi_core_wrapper/: Binding.scala
gradle/: libs.versions.toml
native/: Cargo.toml
native/src/: lib.rs
native/src/vm/: i32_round_vm_wrapper.rs  mod.rs
project/: plugins.sbt
